--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ip": "^1.1.5",
     "register-service-worker": "^1.5.2",
     "vue": "^2.6.6",
+    "vue-data-tables": "^3.4.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "xlsx": "^0.14.1"
