--- a/for_user/package.json
+++ b/for_user/package.json
@@ -11,7 +11,9 @@
     "mand-mobile": "^2.0.0",
     "normalize.css": "^8.0.0",
     "register-service-worker": "^1.6.2",
+    "vee-validate": "^2.2.0",
     "vue": "^2.6.6",
+    "vue-i18n": "^8.9.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
